--- a/.golangci.yml
+++ b/.golangci.yml
@@ -154,6 +154,10 @@ linters:
     #- tagliatelle # checks the struct tags
     #- thelper # detects golang test helpers without t.Helper() call and checks the consistency of test helpers
     #- wsl # [too strict and mostly code is not more readable] whitespace linter forces you to use empty lines
+  disable:
+    - godot
+    - gochecknoinits
+    - gochecknoglobals
 
   # All settings can be found here https://github.com/golangci/golangci-lint/blob/HEAD/.golangci.reference.yml
   settings:
