--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ DB_ENABLE_LOGS=false
 DB_MAX_OPEN_CONNECTIONS=10
 DB_MAX_IDLE_CONNECTIONS=10
 
+# Redis
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
 # JWT
 JWT_PRIVATE_KEY=
 JWT_ISSUER=
